--- a/projects/Perplexity/pages/discover page/discover.css
+++ b/projects/Perplexity/pages/discover page/discover.css
@@ -19,19 +19,20 @@ body{
 header{
     display: flex;
     flex-direction: column;
-    gap: 1rem;
-    margin-bottom: 2rem;
+    gap: 0.5rem;
+    margin-bottom: 1.5rem;
 }
 header div {
     display: flex;
     align-items: center;
     justify-content: space-between;
     gap: 1rem;
-    padding:0.8rem 0.9rem;
+    padding:0.7rem 0.9rem;
 }
 header h1{
      font-family: "Open Sans", sans-serif;
      font-weight: 500;
+     font-size: 1.9rem;
 }
 header ul{
     display: flex;
@@ -58,7 +59,7 @@ main {
      gap: 1.5rem;
 }
 main article{
-    height: 70vh;
+    height: 60vh;
     background-color: rgb(161, 158, 158);
     padding: 0.5rem;
     border-radius: 0.9rem;
@@ -66,7 +67,7 @@ main article{
 main article img{
     width: 100%;
     border-radius: 0.5rem;
-    height: 60%;
+    height: 50%;
 }
 main article h2{
      font-family: "Open Sans", sans-serif;
@@ -78,6 +79,31 @@ main article P{
       font-family: "Open Sans", sans-serif;
       color: aliceblue;
 }
+
+ /*footer styleing*/
+ footer {
+    background-color: inherit;
+    position:fixed;
+    bottom:0;
+    width: 100%;
+ }
+ footer nav{
+    padding: 1rem;
+    display: flex;
+    justify-content:space-between;
+ }
+ footer nav #Discover-page{
+   color:rgb(0, 217, 255);
+ }
+
+
+
+
+
+
+
+
+
 
 @media (min-width:480px){
     main {
