--- a/projects/Perplexity/perplexity.css
+++ b/projects/Perplexity/perplexity.css
@@ -73,7 +73,7 @@ main {
  /*footer styleing*/
  footer {
     position:absolute;
-    bottom: 0.5rem;
+    bottom: 0;
     width: 100%;
  }
  footer nav{
@@ -81,7 +81,9 @@ main {
     display: flex;
     justify-content:space-between;
  }
-
+ footer nav #search-page{
+   color:rgb(0, 217, 255);
+ }
  /*desktop-styles*/
  @media (min-width:600px){
    main {
