--- a/projects/myPhone/myPhone.css
+++ b/projects/myPhone/myPhone.css
@@ -11,6 +11,7 @@ body{
     font-family: "Open Sans", sans-serif;
     padding:0.7rem 0.5rem;
     width: 400px;
+    height: 100vh;
 }
 header {
     display: flex;
@@ -52,16 +53,63 @@ main #search-bar input::placeholder{
     color: white;
 }
 main #home-apps{
-    margin-top: 10%;
+    margin-top: 15%;
     display: grid;
     grid-template-columns: repeat(5,5fr);
     gap: 1rem;
 }
 main #home-apps button{
-    padding: 1.8rem;
     border-radius: 0.5rem;
     border: none;
+    font-size:2.1rem;
+    color: white;
+    padding: 0.5rem 0 0.5rem 0;
+    cursor: pointer;
 }
+main #home-apps button:nth-of-type(1){
+     background-color: #0077B5;
+}
+
+main #home-apps button:nth-of-type(2){
+      background-color:	#E1306C;
+}
+
+main #home-apps button:nth-of-type(3){
+     background-color:#FF0000;
+}
+
+main #home-apps button:nth-of-type(4){
+     color: #0077B5;
+     font-size: 3rem;
+     padding: 0;
+}
+
+main #home-apps button:nth-of-type(5){
+     background-color:#25D366;
+}
+
+main #home-apps button:nth-of-type(6){
+     background-color:#E60023;
+}
+
+main #home-apps button:nth-of-type(7){
+     background-color:	#FFFC00;
+}
+
+main #home-apps button:nth-of-type(8){
+     background-color:#4285F4;
+}
+
+main #home-apps button:nth-of-type(9){
+     background-color:#4285F4;
+}
+
+main #home-apps button:nth-of-type(10){
+     background-color:#4285F4;
+}
+
+
+
 footer {
     position:fixed;
     width:inherit;
@@ -71,7 +119,28 @@ footer {
     gap: 1.3rem;
 }
 footer button{
-    padding: 1.8rem;
+     padding: 0.4rem 0.6rem;
      border-radius: 0.5rem;
      border: none;
+     font-size: 2.6rem;
+     color: white;
+
+}
+
+footer button:nth-of-type(1){
+     background-color:#34C759;
+}
+
+footer button:nth-of-type(2){
+  background-color:#4285F4;
+}
+footer button:nth-of-type(3){
+     background-color:	#555555;
+}
+footer button:nth-of-type(4){
+      background-color:#4285F4;
+}
+
+footer button:nth-of-type(5){
+     background-color:#FF0000;
 }
