--- a/projects/CCAR/ccar.css
+++ b/projects/CCAR/ccar.css
@@ -188,13 +188,17 @@ main #add-new-transaction form button {
     }
 }   
 /*count transactions section*/
+main #count-transactions {
+    flex-direction: column;
+    padding: 1rem;
+    align-items:start;
+}
 main #count-transactions div{
     padding: 1rem;
     background-color: rgb(19, 18, 18);
     border: 1px solid rgba(79, 87, 86, 0.603);
     border-radius: 0.6rem;
     line-height:1.6;
-    margin: 1rem;
 }
 main #count-transactions h3 {
     font-size: 1.4rem;
@@ -205,7 +209,16 @@ main #count-transactions p {
     font-size: 1.2rem;
     color: rgba(255, 255, 255, 0.842);
 }
-
+main #count-transactions button {
+    background-color: rgb(13, 177, 13);
+    border: none;
+    color: white;
+    font-size: 1rem;
+    padding:0.3rem 0.8rem;
+    border-radius: 0.3rem;
+    cursor: pointer;
+    margin-top: 0.3rem;
+}
 /*==================footer===================*/
 footer {
     padding: 1rem 0;
