--- a/projects/CCAR/ccar.css
+++ b/projects/CCAR/ccar.css
@@ -64,8 +64,7 @@ main #date {
     padding: 0.5rem 0.8rem;
     letter-spacing: 0.1rem;
     width: fit-content;
-    border-top-left-radius: 1.5rem;
-    border-bottom-right-radius: 1.5rem;
+    border-radius: 4px;
     border: 1px solid rgba(79, 87, 86, 0.603);
 
 }
@@ -151,7 +150,7 @@ main #add-new-transaction form input::placeholder{
 }
 main #add-new-transaction form input:focus,main #add-new-transaction form select:focus {
     outline:none;
-     border: 1px solid rgb(9, 9, 235);
+     border: 1px solid rgb(47, 11, 228);
 }
 main #add-new-transaction input {
     background-color: black;
@@ -192,9 +191,19 @@ main #count-transactions {
     padding: 1rem;
     align-items:start;
 }
+main #count-transactions fieldset {
+    border: none;
+    border-top: 1.5px solid rgba(79, 87, 86, 0.603);
+    border-bottom: 1.5px solid rgba(79, 87, 86, 0.603);
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items:flex-start;
+    border-radius: 1rem;
+    gap: 0.5rem;
+}
 main #count-transactions div{
     padding: 1rem;
-    background-color: rgb(19, 18, 18);
     border: 1px solid rgba(79, 87, 86, 0.603);
     border-radius: 0.6rem;
     line-height:1.6;
@@ -245,6 +254,15 @@ main #qr img {
     border-radius: 0.6rem;
     box-shadow: 0 0 10px rgba(0, 255, 242, 0.377);
 }
+main #qr div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 90%;
+    margin-top: 1rem;
+    margin: 0 1rem;
+    padding-bottom: 1rem;
+}
 main #qr button {
     background-color: rgb(44, 44, 44);
     border: none;
@@ -253,7 +271,6 @@ main #qr button {
     padding: 0.5rem 1rem;
     border-radius: 0.3rem;
     cursor: pointer;
-    margin-right: 1rem;
 }
 /*==================footer===================*/
 footer {
